# BPspice

./: Cargo.toml  README.md
BPspice/: Cargo.toml
BPspice-analysis/: Cargo.toml
BPspice-circuit/: Cargo.toml
BPspice-device/: Cargo.toml
BPspice-parser/: Cargo.toml
BPspice-py/: Cargo.toml  pyproject.toml
BPspice-py/src/: lib.rs
BPspice-solver/: Cargo.toml
gspice/: Cargo.toml
gspice-analysis/: Cargo.toml
gspice-circuit/: Cargo.toml
gspice-circuit/src/: expression.rs  instance.rs  lib.rs  node.rs
gspice-device/: Cargo.toml
gspice-parser/: Cargo.toml
gspice-py/: Cargo.toml  pyproject.toml
gspice-py/examples/: gradient_decent.py
gspice-py/src/: expression.rs  lib.rs
gspice-solver/: Cargo.toml
gspice-solver/src/: lib.rs
gspice-utils/: Cargo.toml
gspice-utils/examples/: gradient_decent.rs  gradient_decent_adam.rs  gradient_decent_logic.rs
gspice-utils/src/: lib.rs
gspice-utils/src/expression/: autograd.rs  impls.rs  mod.rs  op.rs  optimizer.rs  py.rs  recompute.rs  test.rs
gspice-utils/tests/: expression.rs
gspice/src/: lib.rs
gspice/src/expression/: autograd.rs  impls.rs  mod.rs  op.rs  recompute.rs  test.rs
gspice/tests/: expression.rs
