[workspace]
resolver = "2"
members = [
    "gspice",
    "gspice-analysis",
    "gspice-circuit",
    "gspice-device",
    "gspice-parser",
    "gspice-py",
    "gspice-solver", 
    "gspice-utils"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Junzhuo <zhou@junzhuo.site>"]
keywords = ["eda", "SPICE"]
description = "TODO"
readme = "README.md"
repository = "https://github.com/zao111222333/gspice"
documentation = "https://docs.rs/gspice"
categories = ["development-tools"]

[workspace.dependencies]
gspice          = { path = "gspice" }
gspice-analysis = { path = "gspice-analysis" }
gspice-circuit  = { path = "gspice-circuit" }
gspice-device   = { path = "gspice-device" }
gspice-parser   = { path = "gspice-parser" }
gspice-solver   = { path = "gspice-solver" }
gspice-utils    = { path = "gspice-utils" }

candle-core = "0.7"
arcstr = { version = "1.2", features = ["serde"] }
ordered-float = { version = "4.0", features = ["serde"] }
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
thiserror = "1.0"
nom = "7.1"
pyo3 = { version = "0.22.4", features = ["extension-module", "multiple-pymethods", "abi3", "abi3-py37"] }
num-traits = "0.2.19"
rand = "0.8.5"
serial_test = "0.5"
ryu = "1.0"