[package]
name = "BPspice-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
