[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "gspice"
version = "0.1.0"
classifiers = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]

[tool.maturin]
include = [
#   { path = "path/**/*", format = "sdist" },
#   { path = "all", format = ["sdist", "wheel"] },
#   { path = "for/wheel/**/*", format = "wheel" }
]