[package]
name = "gspice-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true

[dependencies]
candle-core.workspace = true
ordered-float.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
pyo3.workspace = true
log.workspace = true
ryu.workspace = true

[dev-dependencies]
serial_test.workspace = true